Change HazeIT to use testcontainers